--- a/style.css
+++ b/style.css
@@ -15,7 +15,8 @@
     inherits: false;
 }
 body {
-    min-height: 98vh;
+    min-height: 100vh;
+  
     background-image: linear-gradient(to top, #000000,#2b124b,#000000);
              background-repeat: no-repeat;
             background-position:  center;
@@ -27,11 +28,27 @@ body {
     --rotate: 360deg;
     --purple: #8b008b;
     --danger: #dc143c;
-
-    
+    position: relative;
+    z-index: 0;
 }
 
-    
+
+
+
+
+@keyframes animate{
+  0%
+  {
+    transform: rotate(0deg);
+
+  }
+  100%{
+    transform: rotate(360deg);
+
+  }
+}
+
+
     
   
   
@@ -402,6 +419,7 @@ body {
   .phone img{
    margin-right: 250px;
     margin-bottom: -50px;
+    animation: animate 6s linear infinite;
   }
   .phone::before{
     content:"";
@@ -472,6 +490,7 @@ body {
   .email img{
    margin-right: 250px;
     margin-bottom: -50px;
+    animation: animate 6s linear infinite;
   }
   .email::before{
     content:"";
@@ -537,11 +556,13 @@ body {
     outline: none;
     justify-content: center;
     
+    
   }
 
   .fb img{
    margin-right: 250px;
     margin-bottom: -50px;
+    animation: animate 6s linear infinite;
   }
   .fb::before{
     content:"";
@@ -587,6 +608,76 @@ body {
     width: 100%;
     height: 100%;
   }
+
+
+
+
+  .tiktok{
+    position:relative;
+    cursor: pointer;
+    padding: 5px 20px;
+    background-color: #5afe7300;
+    border-radius: 10px;
+    text-align: center;
+    color:var(--white);
+    border: none;
+    outline: none;
+    justify-content: center;
+    
+  }
+
+  .tiktok img{
+   margin-right: 250px;
+    margin-bottom: -50px;
+    animation: animate 6s linear infinite;
+  }
+  .tiktok::before{
+    content:"";
+    position:absolute;
+    top:0;
+    color:rgba(250, 248, 248, 0.774);
+   
+    border-radius: 10px;
+    left:0;
+    height:0%;
+    width:2px;
+    background-color: #ffffffe7;
+    z-index: -1;
+    transition: height 0.5s, width 1s ease-in-out 0.2s ;
+    box-shadow: 0 0 30px  #ffffff;
+  }
+  .tiktok:hover:before{
+    width: 100%;
+    height: 100%;
+    
+   
+  }
+
+  .tiktok h1 {
+    position:relative;
+    top: 50%;
+    background-color: rgba(213, 170, 77, 0);
+    height:0%;
+    width: 20px;
+    left: 62%;
+    opacity: 0;
+    transform: translateX(50%) translateY(50%);
+    transition: all 0.7s ease-in-out;
+    text-align: center;
+    padding: 1px 20px;
+    
+   
+    
+  }
+  
+  .tiktok:hover h1{
+    opacity: 1;
+    transform: translateX(-50%) translateY(-50%);
+    width: 100%;
+    height: 100%;
+    color:#000000;
+  }
+
 
 
 
@@ -742,8 +833,6 @@ body {
     }
     
     }
-
-
 
     
 
