--- a/style.css
+++ b/style.css
@@ -351,9 +351,10 @@ body {
   }
   .card img:nth-child(2){
     position: absolute;
-    bottom: -13%;
-    width: 200%;
-    left: 14%;
+    bottom: 0%;
+    width: 100%;
+    left: 25%;
+    height: 500px;
     
     transform: translateX(-25%);
     opacity: 0;
