--- a/style.css
+++ b/style.css
@@ -73,8 +73,8 @@ body {
     cursor: pointer;
     filter: brightness(1.5);
     margin-left: -10%;
-    
   }
+    
 
 
 
@@ -721,21 +721,13 @@ body {
        
           margin-left: -150px;
           filter: brightness(1);
-          color: transparent;
-          background-image: linear-gradient(
-            to right top,
-            #fc6c8f,
-            #ff2ced,
-            #ffb86c,
-            #2cccff,
-            #ffcc70,
-            #c850c0,
-            #4158d0);
+          color: #000000;
+          
           background-clip: text;
           -webkit-background-clip: text;
           display: inline-block;
           font-weight: bold;
-          animation: text-flicker 2.9s linear infinite;
+          animation: animate 2.9s linear infinite;
         }
         
 
@@ -748,70 +740,39 @@ body {
       
       .text-2 {
         margin-left: 0px;
-        color: transparent;
-        background-image: linear-gradient(
-          to left,
-          #fc6c8f,
-          #ff2ced,
-          #ffb86c,
-          #2cccff,
-          #20e3b2,
-          #ffcc70,
-          #c850c0,
-          #4158d0);
+        color: #000000;
         background-clip: text;
         -webkit-background-clip: text;
         display: inline-block;
         font-weight: bold;
         filter: brightness(1.25);
-        animation: text-flicker 2.5s linear infinite;
+        animation: animate 2.5s linear infinite;
         color: transparent;
       }
       .text-3 {
         margin-left: 125px;
-        color: transparent;
-        background-image: linear-gradient(
-          to left bottom,
-          #fc6c8f,
-          #ff2ced,
-          #ffb86c,
-           #ff2ced,
-          #20e3b2,
-          #ff2ced,
-          #ffcc70,
-          #c850c0,
-          #4158d0);
+        color: #000000;
         background-clip: text;
         -webkit-background-clip: text;
         display: inline-block;
         font-weight: bold;
        
-        animation: text2-flicker 1s linear infinite;
+      
 
         filter: brightness(1);
-        animation: text-flicker 2.2s linear infinite;
+        animation: animate 2.2s linear infinite;
       }
       .text-4 {
         margin-left: 200px;
-        color: transparent;
-        background-image: linear-gradient(
-          to right bottom,
-          #fc6c8f,
-          #ff2ced,
-          #ffb86c,
-          #2cccff,
-          #ff2ced,
-          #ffcc70,
-          #c850c0,
-          #4158d0);
+        color: #000000;
         background-clip: text;
         -webkit-background-clip: text;
         display: inline-block;
         font-weight: bold;
-        animation: text2-flicker 5s linear infinite;
+        animation: animate 5s linear infinite;
 
         filter: brightness(1);
-        animation: text-flicker 2.7s linear infinite;
+        animation: animate 2.7s linear infinite;
         
       }
     
@@ -916,7 +877,25 @@ body {
     
     }
     
+    }@keyframes animate{
+    0%,18%,20.1%,30%,60.1%,80%,90.1%,92%
+    { 
+        color: #ffffff00;
+        text-shadow: none;
     }
+    18.1%,20.1%,30%,50%,60.1%,65%,80.1%,90%,92.1%,100%
+    {
+        color: #ffffff;
+        text-shadow: 0 0 10px #03bcf4,
+            0 0 0px #03bcf4,
+            0 0 40px #03bcf4,
+            0 0 80px #03e4f4,
+            0 0 160px #03e4f4,
+            0 0 400px #03e4f4
+
+
+    }
+}
 
     
 
